kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: default
  annotations:
     kubernetes.io/ingress.class: "nginx"
     ingress.kubernetes.io/add-base-url: "true"
     nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
     nginx.ingress.kubernetes.io/auth-tls-secret: default/ca-secret
     nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
     nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
spec:
  tls:
  - hosts:
    - chatserver.com
    secretName: self-tls
  rules:
  - host: chatserver.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask-service
              port: 
                number: 5000 
        - path: /room
          pathType: Prefix
          backend:
            service:
              name: room-service
              port: 
                number: 5000
